# Test-zephyr

./: CMakeLists.txt  Kconfig  README.md  app.overlay  prj.conf
src/: main.c  modules.h
src/modules/: blink.c  button_i.c  countdown.c  logging_system.c  temp_read.c  thread_mg.c
